# tide-compress

./: .gitignore  CHANGELOG.MD  Cargo.toml  Changelog.md  README.md  build.rs  byte-array  data
.github/workflows/: ci.yml
generate-database/: Cargo.toml
generate-database/src/: main.rs
src/: codegen_database.rs  encoding.rs  lib.rs  middleware.rs
tests/: chunked_encode_small.rs  compressed.rs  content_type.rs  existing-encoding.rs  gzip_compressed.rs  quality.rs  test_utils.rs  unencoded.rs
