[package]
name = "tide-compress"
version = "0.8.1"
authors = ["Jeremiah Senkpiel <fishrock123@rocketmail.com>"]
edition = "2018"
license = "BlueOak-1.0.0"
description = "Outgoing compression middleware for the Tide server framework."
readme = "README.md"
repository = "https://github.com/Fishrock123/tide-compress"
keywords = ["tide", "middleware", "brotli", "gzip", "compression"]
categories = [
  "web-programming::http-server"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["all"]
all = ["brotli", "gzip", "deflate"]

brotli = ["async-compression/brotli"]
gzip = ["async-compression/gzip"]
deflate = ["async-compression/deflate"]

[dependencies]
async-compression = { version = "0.3", features = ["futures-bufread"] }
futures-lite = "1.11"
http-types = "2.5"
tide = { version = "0.16", default-features = false }

[dev-dependencies]
async-h1 = "2.1"
async-std = { version = "1.6", features = ["attributes"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]
