[workspace]
members = [
  "generate-database"
]

[package]
name = "tide-compress"
version = "0.10.5"
authors = ["Jeremiah Senkpiel <fishrock123@rocketmail.com>"]
edition = "2018"
license = "BlueOak-1.0.0"
description = "Outgoing compression middleware for the Tide server framework."
readme = "README.md"
repository = "https://github.com/Fishrock123/tide-compress"
keywords = ["tide", "middleware", "brotli", "gzip", "compression"]
categories = [
  "web-programming::http-server"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["all"]
all = ["brotli", "gzip", "deflate", "db-check"]

brotli = ["async-compression/brotli"]
gzip = ["async-compression/gzip"]
deflate = ["async-compression/deflate"]

db-check = ["regex-check", "phf"]
regex-check = ["regex"]

[dependencies]
async-compression = { version = "0.3", features = ["futures-bufread"] }
futures-lite = "1.11"
http-types = { version = "2.5", default-features = false }
phf = { version = "0.11", optional = true }
regex = { version = "1.5", optional = true }
tide = { version = "0.16", default-features = false }

[dev-dependencies]
async-h1 = "2.1"
async-std = { version = "1.11", features = ["attributes"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]

[package.metadata.docs.rs]
# Prevent docs.rs from trying to pull down the database...
no-default-features = true
features = ["brotli", "gzip", "deflate", "regex-check"]
