[package]
name = "generate-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.11", features = ["attributes"] }
cfg-if = "1"
phf_codegen = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1" 
surf = { version = "2.3.2", default-features = false, features = ["h1-client-rustls"] }
